Scenario 3 update on classes messages sent and received added components for finance

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,6 +34,7 @@ file.reference.guava-15.0.jar=lib/guava-15.0.jar
 file.reference.jandex-1.1.0.Final.jar=lib/jandex-1.1.0.Final.jar
 file.reference.mhx.jar=lib/mhx.jar
 file.reference.mhxUtil.jar=lib/mhxUtil.jar
+file.reference.sqljdbc4.jar=lib/sqljdbc4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -45,7 +46,8 @@ javac.classpath=\
     ${file.reference.classmate-1.0.0.jar}:\
     ${file.reference.bonecp-0.8.0.RELEASE-javadoc.jar}:\
     ${file.reference.bonecp-0.8.0.RELEASE.jar}:\
-    ${file.reference.guava-15.0.jar}
+    ${file.reference.guava-15.0.jar}:\
+    ${file.reference.sqljdbc4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
