--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,6 +4,8 @@ annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ECS-KESWS-Middleware
+application.vendor=kim
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,6 +28,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/ECS-KESWS-Middleware.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.bonecp-0.8.0.RELEASE-javadoc.jar=lib/bonecp-0.8.0.RELEASE-javadoc.jar
 file.reference.bonecp-0.8.0.RELEASE.jar=lib/bonecp-0.8.0.RELEASE.jar
@@ -74,7 +77,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=org.kephis.ecs_kesws.EcsKeswsServiceControlPanel
+main.class=org.kephis.ecs_kesws.MiddlewareService
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
