--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -16,6 +16,7 @@ build.generated.sources.dir=${build.dir}/generated-sources
 build.sysclasspath=ignore
 build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
+copylibs.excludes=${javafx.classpath.extension}
 # Uncomment to specify the preferred debugger connection transport:
 #debug.transport=dt_socket
 debug.classpath=\
@@ -39,7 +40,9 @@ file.reference.mhx.jar=lib/mhx.jar
 file.reference.mhxUtil.jar=lib/mhxUtil.jar
 file.reference.sqljdbc4.jar=lib/sqljdbc4.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.hibernate4-persistence.classpath}:\
     ${file.reference.mhx.jar}:\
@@ -55,9 +58,7 @@ javac.classpath=\
 javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
-    ${javac.classpath}:\
-    ${libs.eclipselinkmodelgen.classpath}:\
-    ${libs.hibernate4-persistencemodelgen.classpath}
+    ${javac.classpath}
 javac.source=1.7
 javac.target=1.7
 javac.test.classpath=\
@@ -77,10 +78,25 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
+keep.javafx.runtime.on.classpath=true
 main.class=org.kephis.ecs_kesws.MiddlewareService
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
+native.bundling.enabled=true
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
