--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -88,7 +88,7 @@ jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
 keep.javafx.runtime.on.classpath=true
-main.class=org.kephis.ecs_kesws.MiddlewareService
+main.class=org.kephis.ecs_kesws.OutgoingMessageProcessor
 # Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
 manifest.custom.codebase=
 # Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
