updated outgoingmessageprocessor senario 3 file processor cd file generation paramters from view wwere update to capture fields created. Create a second object to copy the new marshed object before generating the xml file

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -53,8 +53,7 @@ javac.classpath=\
     ${file.reference.bonecp-0.8.0.RELEASE-javadoc.jar}:\
     ${file.reference.bonecp-0.8.0.RELEASE.jar}:\
     ${file.reference.guava-15.0.jar}:\
-    ${file.reference.sqljdbc4.jar}:\
-    ${javafx.classpath.extension}
+    ${file.reference.sqljdbc4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -79,11 +78,6 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-javafx.classpath.extension=\
-    ${java.home}/lib/jfxrt.jar:\
-    ${java.home}/lib/javaws.jar:\
-    ${java.home}/lib/deploy.jar:\
-    ${java.home}/lib/plugin.jar
 jnlp.codebase.type=no.codebase
 jnlp.descriptor=application
 jnlp.enabled=false
